--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -410,6 +410,9 @@
             color: #4b5563;
         }
     }
+    .main-img-work {
+        border-radius: 0px 12px 12px 0px !important;
+    }
     .wrapper-work {
         padding: 0 64px;
         .row {
