--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -847,6 +847,13 @@
             padding: 16px;
             .switch-theme {
                 margin-bottom: 16px;
+                span {
+                    font-family: "Inter";
+                    font-size: 16px;
+                    font-weight: 400;
+                    line-height: 24px;
+                    color: #4b5563;
+                }
                 .icon-mode {
                     margin-right: 0;
                 }
