--- a/src/template/partials/header.html
+++ b/src/template/partials/header.html
@@ -15,7 +15,7 @@
         aria-expanded="false"
         aria-label="Toggle navigation"
     >
-        <span id="navbarTogglerIcon" class="navbar-toggler-icon d-flex justify-content-center align-items-center"><i class="fa-solid fa-bars text-black fa-lg"></i></span>
+        <span id="navbarTogglerIcon" class="navbar-toggler-icon d-flex justify-content-center align-items-center"><i class="fa-solid fa-bars text-black fa-xl"></i></span>
     </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-lg-0">
