--- a/src/template/partials/footer.html
+++ b/src/template/partials/footer.html
@@ -19,7 +19,7 @@
                                 ><i class="fa-solid fa-envelope"></i
                             ></span>
                             <span class="name-email"
-                                >reachsagarshah@gmail.com</span
+                                ><a href="" class="name-email">reachsagarshah@gmail.com</a></span
                             >
                             <img
                                 src="assets/images/Icon Button-2.svg"
@@ -30,7 +30,7 @@
                             <span class="phone"
                                 ><i class="fa-solid fa-phone"></i
                             ></span>
-                            <span class="number-phone">+91 8980500565</span>
+                            <span class="number-phone"><a class="number-phone" href="#">+91 8980500565</a></span>
                             <img
                                 src="assets/images/Icon Button-2.svg"
                                 alt=""
