--- a/src/template/partials/footer.html
+++ b/src/template/partials/footer.html
@@ -16,23 +16,21 @@
                     >
                         <div class="email">
                             <span class="icon"
-                                ><i class="fa-solid fa-envelope"></i
-                            ></span>
-                            <span class="name-email"
+                                ><img src="assets/images/email.svg" alt="" srcset=""></span>
+                            <span class=""
                                 ><a href="" class="name-email">reachsagarshah@gmail.com</a></span
                             >
                             <img
-                                src="assets/images/Icon Button-2.svg"
+                                src="assets/images/icon-button-main.svg"
                                 alt=""
                             />
                         </div>
                         <div class="main-phone">
                             <span class="phone"
-                                ><i class="fa-solid fa-phone"></i
-                            ></span>
+                                ><img src="assets/images/phone.svg" alt="" srcset=""></span>
                             <span class="number-phone"><a class="number-phone" href="#">+91 8980500565</a></span>
                             <img
-                                src="assets/images/Icon Button-2.svg"
+                                src="assets/images/icon-button-main.svg"
                                 alt=""
                             />
                         </div>
@@ -40,11 +38,11 @@
                     <div class="find-me text-center">
                         <span class="platforms">You may also find me on these platforms!</span>
                         <div class="find-me-link">
-                            <a href="#"> <i class="fa-brands fa-github"></i> </a>
+                            <a href="#"> <img src="assets/images/github.svg" alt=""></i> </a>
                             <a href="#">
-                                <i class="fa-brands fa-twitter"></i>
+                                <img src="assets/images/twitter.svg" alt="" srcset=""></i>
                             </a>
-                            <a href="#"> <i class="fa-brands fa-figma"></i> </a>
+                            <a href="#"> <img src="assets/images/figmaa.svg" alt="" srcset=""></i> </a>
                         </div>
                     </div>
                 </div>
