--- a/src/template/partials/header.html
+++ b/src/template/partials/header.html
@@ -1,54 +1,57 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary navbar-main">
-    <div class="container p-0">
-        <h1>
-            <a class="navbar-brand" href="#"
-                ><img src="assets/images/LOGO-Light.svg" alt="" srcset=""
-            /></a>
-        </h1>
-        <button
-        id="navbarToggler"
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-    >
-        <span id="navbarTogglerIcon" class="navbar-toggler-icon d-flex justify-content-center align-items-center"><i class="fa-solid fa-bars text-black fa-xl"></i></span>
-    </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#about"
-                        >About</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#work"
-                        >Work</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#testimonials"
-                        >Testimonials</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#contact"
-                        >Contact</a
-                    >
-                </li>
-            </ul>
-            <div class="d-lg-flex btn-main" role="search">
-                <div class="d-flex justify-content-between align-items-center switch-theme">
-                    <span class="d-lg-none">Switch Theme</span>
-                    <button class="border-0 icon-mode"><img src="assets/images/icon-light-mode.svg" alt=""></button>
+<header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-main">
+        <div class="container">
+            <h1>
+                <a class="navbar-brand" href="#"
+                    ><img src="assets/images/LOGO-Light.svg" alt="" srcset=""
+                /></a>
+            </h1>
+            <button
+            id="navbarToggler"
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+        >
+            <span id="navbarTogglerIcon" class="navbar-toggler-icon d-flex justify-content-center align-items-center"><i class="fa-solid fa-bars text-black fa-xl"></i></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#about"
+                            >About</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#work"
+                            >Work</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#testimonials"
+                            >Testimonials</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#contact"
+                            >Contact</a
+                        >
+                    </li>
+                </ul>
+                <div class="d-lg-flex btn-main" role="search">
+                    <div class="d-flex justify-content-between align-items-center switch-theme">
+                        <span class="d-lg-none">Switch Theme</span>
+                        <button class="border-0 icon-mode"><img src="assets/images/icon-light-mode.svg" alt=""></button>
+                    </div>
+                    <button class="btn btn-outline-success btn-download" type="do">
+                        Download CV
+                    </button>
                 </div>
-                <button class="btn btn-outline-success btn-download" type="do">
-                    Download CV
-                </button>
             </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</header>
+
