--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -90,9 +90,7 @@
             margin-bottom: 48px;
             .location {
                 margin-bottom: 8px;
-
-                i {
-                    color: #4b5563;
+                img {
                     margin-right: 8px;
                 }
                 .name-main {
@@ -105,11 +103,7 @@
             }
         }
         .new-project {
-            .circle-main {
-                width: 8px;
-                height: 8px;
-                background-color: #10b981;
-                border-radius: 50%;
+            img {
                 margin-right: 8px;
             }
             .available {
@@ -192,20 +186,28 @@
                     position: relative;
                     z-index: 10;
                     top: 0;
+                    &::after {
+                        position: absolute;
+                        background-color: #e5e7eb;
+                        width: 100%;
+                        height: 100%;
+                        right: 40px;
+                        top: 40px;
+                    }
                 }
-                .wrapper-gray {
-                    position: absolute;
-                    background-color: #e5e7eb;
-                    width: 100%;
-                    height: 100%;
-                    right: 40px;
-                    top: 40px;
-                }
+                // .wrapper-gray {
+                //     position: absolute;
+                //     background-color: #e5e7eb;
+                //     width: 100%;
+                //     height: 100%;
+                //     right: 40px;
+                //     top: 40px;
+                // }
             }
         }
     }
     .wrapper-about-me {
-        h2 {
+        h3 {
             font-family: Inter;
             font-size: 30px;
             font-weight: 600;
@@ -346,6 +348,7 @@
             align-items: flex-start;
             border-radius: 12px;
             box-shadow: 0px 4px 3px 0px #00000012;
+            background-color: #ffffff;
             .logo-experience {
                 flex: 0 0 25%;
             }
@@ -364,6 +367,7 @@
                     flex: 0 0 25%;
                     ul {
                         list-style-type: disc;
+                        max-width: 384px;
                         li {
                             font-family: "Inter";
                             font-size: 16px;
@@ -423,9 +427,10 @@
                 border-right: 1px solid #f3f4f6;
                 background-color: #f9fafb;
                 border-radius: 12px 0px 0px 12px;
+                box-shadow: 0px 4px 3px 0px #0000001a;
+
                 img {
                     border-radius: 12px;
-                    box-shadow: 0px 4px 3px 0px #0000001a;
                 }
             }
             .details-project {
@@ -433,7 +438,7 @@
                 border-radius: 12px 0px 0px 12px;
                 .project-title {
                     margin-bottom: 24px;
-                    h4 {
+                    h3 {
                         font-family: "Inter";
                         font-size: 20px;
                         font-weight: 600;
@@ -517,6 +522,7 @@
                 align-items: center;
                 box-shadow: 0px 4px 3px 0px #00000012;
                 border-radius: 12px;
+                background-color: #ffffff;
 
                 .img-testimonials {
                     width: 64px;
@@ -546,6 +552,7 @@
                         line-height: 28px;
                         text-align: center;
                         color: #111827;
+                        margin-bottom: 4px;
                     }
                     span {
                         font-family: "Inter";
@@ -613,11 +620,12 @@
                 }
                 .name-email {
                     font-family: "Inter";
-                    font-size: 18px;
+                    font-size: 36px;
                     font-weight: 600;
-                    line-height: 28px;
+                    line-height: 40px;
                     letter-spacing: -0.02em;
                     text-align: center;
+
                     color: #111827;
                 }
             }
@@ -638,11 +646,12 @@
                 }
                 .number-phone {
                     font-family: "Inter";
-                    font-size: 18px;
+                    font-size: 36px;
                     font-weight: 600;
-                    line-height: 28px;
+                    line-height: 40px;
                     letter-spacing: -0.02em;
                     text-align: center;
+
                     color: #111827;
                 }
             }
@@ -850,7 +859,7 @@
             padding: 16px;
             .switch-theme {
                 margin-bottom: 16px;
-                span {
+                padding: 6px 0 span {
                     font-family: "Inter";
                     font-size: 16px;
                     font-weight: 400;
