--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -141,7 +141,8 @@
                 z-index: 10;
                 top: 0;
             }
-            .wrapper-gray {
+            &::after {
+                content: "";
                 position: absolute;
                 background-color: #e5e7eb;
                 width: 100%;
@@ -149,6 +150,14 @@
                 left: 40px;
                 top: 40px;
             }
+            // .wrapper-gray {
+            //     position: absolute;
+            //     background-color: #e5e7eb;
+            //     width: 100%;
+            //     height: 100%;
+            //     left: 40px;
+            //     top: 40px;
+            // }
         }
     }
 }
@@ -186,14 +195,15 @@
                     position: relative;
                     z-index: 10;
                     top: 0;
-                    &::after {
-                        position: absolute;
-                        background-color: #e5e7eb;
-                        width: 100%;
-                        height: 100%;
-                        right: 40px;
-                        top: 40px;
-                    }
+                }
+                &::after {
+                    content: "";
+                    position: absolute;
+                    background-color: #e5e7eb;
+                    width: 100%;
+                    height: 100%;
+                    left: 40px;
+                    top: 40px;
                 }
                 // .wrapper-gray {
                 //     position: absolute;
@@ -877,6 +887,22 @@
                 width: 100%;
             }
         }
+    }
+    .footer-main .wrapper-footer .contact-us .email .name-email {
+        font-family: "Inter";
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 28px;
+        letter-spacing: -0.02em;
+        text-align: center;
+    }
+    .footer-main .wrapper-footer .contact-us .main-phone .number-phone {
+        font-family: "Inter";
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 28px;
+        letter-spacing: -0.02em;
+        text-align: center;
     }
 }
 @media screen and (max-width: 320px) {
