--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -444,8 +444,10 @@
                 }
             }
             .details-project {
+                box-shadow: 0px 2px 2px 0px #0000000F;
+                height: 100%;
                 padding: 48px;
-                border-radius: 12px 0px 0px 12px;
+                border-radius: 0 0px 12px 0;
                 .project-title {
                     margin-bottom: 24px;
                     h3 {
@@ -484,6 +486,10 @@
                         margin-bottom: 8px;
                     }
                 }
+            }
+            .project-details-main {
+                border-radius: 0 0px 0px 12px;
+
             }
         }
     }
