--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -873,6 +873,7 @@
         }
         .btn-main {
             padding: 16px;
+            margin: 0gi;
             .switch-theme {
                 margin-bottom: 16px;
                 padding: 6px 0 span {
